Fixed cursor positioning in fullscreen on Cocoa.

--- a/readme.html
+++ b/readme.html
@@ -583,6 +583,8 @@ version of GLFW.</p>
   <li>[Cocoa] Added joystick support (backported from 3.0)</li>
   <li>[Cocoa] Added new joystick test (backported from 3.0)</li>
   <li>[Cocoa] Bugfix: Fullscreen windows with OpenGL 3.2 core contexts failed to open</li>
+  <li>[Cocoa] Bugfix: The cursor position incorrectly rounded during conversion</li>
+  <li>[Cocoa] Bugfix: Cursor positioning led to nonsensical results for fullscreen windows</li>
   <li>[Win32] Bugfix: A test was missing for whether all available pixel formats had been disqualified</li>
   <li>[X11] Bugfix: The VirtualBox OpenGL implementation does not set the window bit for GLX framebuffer configs</li>
 </ul>
