Added release description.

--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,9 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release <blink>IS NOT YET DESCRIBED</blink>.</p>
+<p>This release adds support for joysticks on Mac OS X, a graphical joystick
+test, support for 64-bit builds using MinGW-w64 and fixes for a number of bugs
+in 2.7.5.</p>
 
 <p>For a full list of changes, see the
 <a href="#changelog">version history</a>.</p>
