Removed superfluous link library.

--- a/readme.html
+++ b/readme.html
@@ -456,7 +456,7 @@ to add other libraries as well, such as <code>glu32</code>):</p>
   </tr>
   <tr>
     <td>Microsoft Visual C++</td>
-    <td><code>glfw.lib opengl32.lib user32.lib</code></td>
+    <td><code>glfw.lib opengl32.lib</code></td>
   </tr>
   <tr>
     <td>MinGW32</td>
