Updated compiler system name.

--- a/readme.html
+++ b/readme.html
@@ -459,7 +459,7 @@ to add other libraries as well, such as <code>glu32</code>):</p>
     <td><code>glfw.lib opengl32.lib</code></td>
   </tr>
   <tr>
-    <td>MinGW32</td>
+    <td>MinGW and MinGW-w64</td>
     <td><code>-lglfw -lopengl32</code></td>
   </tr>
   <tr>
@@ -507,7 +507,7 @@ such as <code>opengl32</code> and <code>glu32</code>):</p>
     <td><code>glfwdll.lib</code></td>
   </tr>
   <tr>
-    <td>MinGW32</td>
+    <td>MinGW and MinGW-w64</td>
     <td><code>-lglfwdll</code></td>
   </tr>
   <tr>
