--- a/readme.html
+++ b/readme.html
@@ -580,6 +580,7 @@ version of GLFW.</p>
 
 <h3>v2.7.7</h3>
 <ul>
+  <li>[X11] Added support for the <code>GLX_EXT_swap_control</code> and <code>GLX_MESA_swap_control</code> extensions as alternatives to <code>GLX_SGI_swap_control</code></li>
 </ul>
 
 <h3>v2.7.6</h3>
