--- a/readme.html
+++ b/readme.html
@@ -1205,7 +1205,7 @@ their skills.  Special thanks go out to:</p>
   language</li>
 
   <li>Shane Liesegang, for providing a bug fix relating to Cocoa window
-  restoration</li>
+  restoration and reporting a Cocoa cursor input compilation error</li>
 
   <li>Tristam MacDonald, for his bug reports and feedback on the Cocoa port</li>
 
