--- a/readme.html
+++ b/readme.html
@@ -1238,6 +1238,9 @@ their skills.  Special thanks go out to:</p>
 
   <li>Johannes Stein, for maintaining the Pascal bindings</li>
 
+  <li>Cort Stratton, for reporting a bug related to the creation of debug
+  contexts of version 2.1 and below</li>
+
   <li>Sergey Tikhomirov, for the initial implementation of joystick support on
   Mac OS X</li>
 
