--- a/readme.html
+++ b/readme.html
@@ -582,7 +582,9 @@ version of GLFW.</p>
 <ul>
   <li>[Cocoa] Bugfix: The cursor positioning code used NSPoint in place of CGPoint</li>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> hint did not trigger context re-creation when <code>WGL_ARB_create_context</code> was available</li>
+  <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
   <li>[X11] Added support for the <code>GLX_EXT_swap_control</code> and <code>GLX_MESA_swap_control</code> extensions as alternatives to <code>GLX_SGI_swap_control</code></li>
+  <li>[X11] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
 </ul>
 
 <h3>v2.7.6</h3>
