--- a/readme.html
+++ b/readme.html
@@ -581,6 +581,7 @@ version of GLFW.</p>
 <h3>v2.7.7</h3>
 <ul>
   <li>[Cocoa] Bugfix: The cursor positioning code used NSPoint in place of CGPoint</li>
+  <li>[Cocoa] Bugfix: The detection of setRestorable: used the wrong selector signature</li>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> hint did not trigger context re-creation when <code>WGL_ARB_create_context</code> was available</li>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
   <li>[X11] Added support for the <code>GLX_EXT_swap_control</code> and <code>GLX_MESA_swap_control</code> extensions as alternatives to <code>GLX_SGI_swap_control</code></li>
@@ -1207,7 +1208,7 @@ their skills.  Special thanks go out to:</p>
   language</li>
 
   <li>Shane Liesegang, for providing a bug fix relating to Cocoa window
-  restoration and reporting a Cocoa cursor input compilation error</li>
+  restoration and reporting several Cocoa bugs</li>
 
   <li>Tristam MacDonald, for his bug reports and feedback on the Cocoa port</li>
 
