Added release description.

--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,8 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release <blink>IS NOT YET DESCRIBED</blink>.</p>
+<p>This release adds fixes for a few minor bugs on each platform, as well as
+support for more swap interval methods on X11.</p>
 
 <p>For a full list of changes, see the
 <a href="#changelog">version history</a>.</p>
