Fixed window size hint updating.

--- a/readme.html
+++ b/readme.html
@@ -587,6 +587,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
   <li>[X11] Added support for the <code>GLX_EXT_swap_control</code> and <code>GLX_MESA_swap_control</code> extensions as alternatives to <code>GLX_SGI_swap_control</code></li>
   <li>[X11] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
+  <li>[X11] Bugfix: The window size hints were not updated when calling <code>glfwSetWindowSize</code> on a non-resizable window</li>
 </ul>
 
 <h3>v2.7.6</h3>
