Updated change log.

--- a/readme.html
+++ b/readme.html
@@ -584,7 +584,7 @@ version of GLFW.</p>
   <li>[Cocoa] Bugfix: The cursor positioning code used NSPoint in place of CGPoint</li>
   <li>[Cocoa] Bugfix: The detection of setRestorable: used the wrong selector signature</li>
   <li>[Cocoa] Bugfix: The test for whether <code>glfwTerminate</code> had been called from the main thread was missing</li>
-  <li>[Win32] Added Visual C++ 2012 project files for the static library and DLL</li>
+  <li>[Win32] Added Visual C++ 2012 project files for the static library, DLL and all test and example programs</li>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> hint did not trigger context re-creation when <code>WGL_ARB_create_context</code> was available</li>
   <li>[Win32] Bugfix: The <code>GLFW_OPENGL_DEBUG_CONTEXT</code> window parameter was not set after debug context creation</li>
   <li>[X11] Added support for the <code>GLX_EXT_swap_control</code> and <code>GLX_MESA_swap_control</code> extensions as alternatives to <code>GLX_SGI_swap_control</code></li>
