--- a/readme.html
+++ b/readme.html
@@ -579,6 +579,11 @@ version of GLFW.</p>
 <a name="changelog"></a>
 <h2>5. Version history</h2>
 
+<h3>v2.7.8</h3>
+<ul>
+  <li>[Win32] Bugfix: The temporary window was shown before being destroyed (backported from 3.0)</li>
+</ul>
+
 <h3>v2.7.7</h3>
 <ul>
   <li>[Cocoa] Bugfix: The cursor positioning code used NSPoint in place of CGPoint</li>
