Fixed names of function pointer typedefs.

--- a/readme.html
+++ b/readme.html
@@ -582,6 +582,7 @@ version of GLFW.</p>
 <h3>v2.7.8</h3>
 <ul>
   <li>[Win32] Bugfix: The temporary window was shown before being destroyed (backported from 3.0)</li>
+  <li>[X11] Bugfix: Some function pointer types were named incorrectly</li>
 </ul>
 
 <h3>v2.7.7</h3>
