--- a/readme.html
+++ b/readme.html
@@ -583,7 +583,7 @@ version of GLFW.</p>
 <ul>
   <li>[Win32] Bugfix: The temporary window was shown before being destroyed (backported from 3.0)</li>
   <li>[X11] Bugfix: Some function pointer types were named incorrectly</li>
-  <li>[X11] Bugfix: The Mesa 9.x implementation of <code>GLX_ARB_create_context</code> is broken in some revisions (backported from 3.0)</li>
+  <li>[X11] Bugfix: The Mesa 9.x implementation of <code>GLX_ARB_create_context_profile</code> is broken in some revisions (backported from 3.0)</li>
 </ul>
 
 <h3>v2.7.7</h3>
