Updated version to 2.7.9.

--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>GLFW 2.7.8 source distribution</h1>
+<h1>GLFW 2.7.9 source distribution</h1>
 
 <ol>
  <li><a href="#intro">Introduction</a></li>
@@ -23,7 +23,7 @@
 <a name="intro"></a>
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7.8 of the GLFW library.  GLFW is a free, Open Source,
+<p>Welcome to version 2.7.9 of the GLFW library.  GLFW is a free, Open Source,
 multi-platform library for OpenGL application development that provides a
 powerful API for handling operating system specific tasks such as opening an
 OpenGL window, reading keyboard, mouse, joystick and time input, creating
@@ -32,8 +32,7 @@ threads, and more.</p>
 <p>GLFW 2.7 is expected to be the last major release of the 2.x series, with
 most development now being done on what will become version 3.0.</p>
 
-<p>This release adds fixes for a few minor bugs on each platform, most notably
-the flashing window on Win32 and a workaround for a bug in Mesa 9.x.</p>
+<p>This release <blink>IS NOT YET DESCRIBED</blink>.</p>
 
 <p>For a full list of changes, see the
 <a href="#changelog">version history</a>.</p>
