Updated relevant URLs to point at GitHub.

--- a/readme.html
+++ b/readme.html
@@ -75,14 +75,13 @@ example and test programs.</p>
 <p>If your compiler/system is not in the list, you may have to create new
 makefiles in the <code>lib\win32</code>, <code>lib/x11</code> or
 <code>lib/cocoa</code> directory, and in the <code>examples</code> directory.
-If you have any problems, please use our
-<a href="http://sourceforge.net/projects/glfw/forums/forum/247562">support forum</a>
-and
-<a href="http://sourceforge.net/tracker/?group_id=72569&atid=534938">bug tracker</a>
-on SourceForge.net. We would like to support as many systems as possible, so if
-you had to make any modifications or additions to the source and/or makefiles
-in order to make GLFW compile successfully, we would very much like to know
-what you had to do.</p>
+If you encounter any problems using, please use the
+<a href="http://sourceforge.net/projects/glfw/forums/forum/247562">support forum</a>.
+If you encounter any bugs, please submit an issue to the
+<a href="https://github.com/glfw/glfw-legacy/issues">issue tracker</a>. We would
+like to support as many systems as possible, so if you had to make any
+modifications or additions to the source and/or makefiles in order to make GLFW
+compile successfully, we would very much like to know what you had to do.</p>
 
 
 <h3>2.1 Microsoft Windows</h3>
@@ -1152,14 +1151,12 @@ useful for OpenGL development.</p>
 
 <p>If you have questions related to the use of GLFW, we have a
 <a href="https://sourceforge.net/forum/forum.php?forum_id=247562">user's web forum</a>,
-and a
-<a href="https://lists.sourceforge.net/lists/listinfo/glfw-user">user's mailing list</a>
-on SF.net, and the registered IRC channel <code>#glfw</code> on
+and the registered IRC channel <code>#glfw</code> on
 <a href="http://freenode.net/">Freenode</a>.</p>
 
 <p>If you have a bug to report, a patch to submit or a feature you'd like to
-request, please file it in one of the
-<a href="http://sourceforge.net/tracker/?group_id=72569">GLFW trackers</a> on SF.net.</p>
+request, please file an issue in the
+<a href="https://github.com/glfw/glfw-legacy/issues">issue trackers</a>.</p>
 
 Finally, if you're interested in helping out with the development of
 GLFW or porting it to your favorite platform, we have a
