Fixed multiple Win32 locked cursor bugs.

--- a/readme.html
+++ b/readme.html
@@ -582,6 +582,13 @@ version of GLFW.</p>
   <li>[Cocoa] Bugfix: The dynamic library makefile rule did not use <code>LFLAGS</code></li>
 </ul>
 
+<h3>v2.7.9</h3>
+<ul>
+  <li>[Win32] Bugfix: Enabling or disabling the cursor for an inactive window did nothing (backported from 3.0)</li>
+  <li>[Win32] Bugfix: The locked cursor was re-centered when the window was inactive (backported from 3.0)</li>
+  <li>[Win32] Bugfix: The cursor clip rectangle included the title bar (backported from 3.0)</li>
+</ul>
+
 <h3>v2.7.8</h3>
 <ul>
   <li>[Win32] Bugfix: The temporary window was shown before being destroyed (backported from 3.0)</li>
